# luzern-velox-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  known_cameras.json  luzern-velox-vibebot.service  velox-bot-async.py  velox-bot-async.service.example  velox.py  velox.service.example
src/: main.rs
