[package]
name = "luzern-velox-vibebot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
scraper = "0.23.1"
teloxide = "0.14.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
dotenvy = "0.15" # For loading .env files
