[package]
name = "luzern-velox-vibebot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.5.0"
log = "0.4"
dotenvy = "0.15.7"
anyhow = "1.0"
reqwest = "0.12.23"
scraper = "0.23.1"
